--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     },
     "scripts": {
         "post-install-cmd": [
+            "cp -rf ./log ../../",
             "cp -rf ./_tmp ../../",
             "mkdir -p ../../lib 2>/dev/null",
             "mkdir -p ../../lib/FrameworkPackage 2>/dev/null",
@@ -50,6 +51,7 @@
             "rm -rf ./lib 2>/dev/null"
         ],
         "post-update-cmd": [
+            "cp -rf ./log ../../",
             "cp -rf ./_tmp ../../",
             "mkdir -p ../../lib 2>/dev/null",
             "cp -f ../../lib/FrameworkPackage/core/config.xml ../../_tmp/config.xml.bak 2>/dev/null",
