AWS-SDK周りの設定を更新

--- a/composer.json
+++ b/composer.json
@@ -50,13 +50,17 @@
             "cp -rf ./autoload.php ../../lib/VendorPackage/AWSSDK 2>/dev/null",
             "cp -rf ./aws ../../lib/VendorPackage/AWSSDK 2>/dev/null",
             "cp -rf ./composer ../../lib/VendorPackage/AWSSDK 2>/dev/null",
-            "cp -rf ./guzzle ../../lib/VendorPackage/AWSSDK 2>/dev/null",
+            "cp -rf ./guzzlehttp ../../lib/VendorPackage/AWSSDK 2>/dev/null",
+            "cp -rf ./mtdowling ../../lib/VendorPackage/AWSSDK 2>/dev/null",
+            "cp -rf ./psr ../../lib/VendorPackage/AWSSDK 2>/dev/null",
             "cp -rf ./symfony ../../lib/VendorPackage/AWSSDK 2>/dev/null",
             "rm -rf ./lib 2>/dev/null",
             "rm -rf ./autoload.php 2>/dev/null",
             "rm -rf ./aws 2>/dev/null",
             "rm -rf ./composer 2>/dev/null",
-            "rm -rf ./guzzle 2>/dev/null",
+            "rm -rf ./guzzlehttp 2>/dev/null",
+            "rm -rf ./mtdowling 2>/dev/null",
+            "rm -rf ./psr 2>/dev/null",
             "rm -rf ./symfony 2>/dev/null",
             "php ../../lib/UNICORN"
         ],
