--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
             "cp -rf ./docs ../../",
             "cp -rf ./logs ../../",
             "cp -rf ./_tmp ../../",
+            "cp -rf ./supple ../../",
             "mkdir -p ../../lib 2>/dev/null",
             "mkdir -p ../../lib/FrameworkPackage 2>/dev/null",
             "mkdir -p ../../lib/FrameworkPackage/core 2>/dev/null",
@@ -51,6 +52,7 @@
             "rm -rf ./docs 2>/dev/null",
             "rm -rf ./logs 2>/dev/null",
             "rm -rf ./_tmp 2>/dev/null",
+            "rm -rf ./supple 2>/dev/null",
             "rm -rf ./composer 2>/dev/null",
             "rm -rf ./lib 2>/dev/null",
             "rm -rf ./autoload.php 2>/dev/null",
@@ -59,6 +61,7 @@
         "post-update-cmd": [
             "cp -rf ./docs ../../",
             "cp -rf ./_tmp ../../",
+            "cp -rf ./supple ../../",
             "mkdir -p ../../lib 2>/dev/null",
             "cp -f ../../lib/FrameworkPackage/core/config.xml ../../_tmp/config.xml.bak 2>/dev/null",
             "cp -f ../../lib/FrameworkPackage/core/package.xml ../../_tmp/package.xml.bak 2>/dev/null",
@@ -68,6 +71,7 @@
             "rm -rf ./docs 2>/dev/null",
             "rm -rf ./logs 2>/dev/null",
             "rm -rf ./_tmp 2>/dev/null",
+            "rm -rf ./supple 2>/dev/null",
             "rm -rf ./composer 2>/dev/null",
             "rm -rf ./lib 2>/dev/null",
             "rm -rf ./autoload.php 2>/dev/null",
