composerのconfig区が重複していたので修正

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,4 @@
 {
-    "config": {
-        "disable-tls": true,
-        "secure-http": false
-    },
     "name": "UNICORN-Project",
     "type": "project",
     "description" : "Fast Start Project Framework.",
@@ -31,6 +27,8 @@
         "lib": "1"
     },
     "config": {
+        "disable-tls": true,
+        "secure-http": false,
         "vendor-dir": "../UNICORN"
     },
     "scripts": {
