--- a/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
+++ b/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
@@ -23,35 +23,50 @@ log_format proxytypelog '$proxy_protocol_addr $remote_addr $remote_user [$time_l
 
 # アプリAPI用
 server {
-	# 環境の設定
+
+	# 環境振り分け設定
+	set $stage "local";
 	set $workspace "";
 	if (-f '/var/www/.dev'){
+		set $stage "dev";
 		set $workspace "dev";
 	}
+	if (-f '/var/www/.prod'){
+		set $stage "prod";
+		set $workspace "";
+	}
 
+	# プロトコル設定
 	listen                    80;
 	# SSLとSpdyとProxyProtocol
-	# ELBのProxyProtocolを使ってSPDYを有効にする場合は以下を利用する
-	listen                    443 ssl http2 proxy_protocol;
-	# ELBのProxyProtocolを使は無いでSPDYを有効にする場合は以下を利用する
-	#listen                    443 ssl http2;
+	# ELBのProxyProtocolを使ってhttp2を有効にする場合は以下を利用する
+	#listen                    443 ssl http2 proxy_protocol;
+	# ELBのProxyProtocolを使は無いでhttp2を有効にする場合は以下を利用する
+	listen                    443 ssl http2;
 	# ELBでSSLが終端する場合、以下は不要
 	ssl_certificate           /var/www/.ssl/private.pem;
 	ssl_certificate_key       /var/www/.ssl/private.key;
+	ssl_trusted_certificate   /var/www/.ssl/private.pem;
+	ssl_dhparam               /etc/ssl/dhparam.pem;
 	ssl_session_timeout       5m;
 	ssl_session_cache         shared:SSL:60m;
 	ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers               HIGH:!aNULL:!MD5;
+	ssl_ciphers               'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:ECDHE-RSA-DES-CBC3-SHA:ECDHE-ECDSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
 	ssl_prefer_server_ciphers on;
+	ssl_stapling              on;
+	ssl_stapling_verify       on;
+	resolver 8.8.8.8;
 
-	server_name devapiservice.domain apiservice.domain; # 取得したドメインを指定してください
-	# ドキュメントルートを指定して下さい
-	# Linuxの場合
+	# ドメイン設定
+	server_name localapiservice.domain devapiservice.domain apiservice.domain; # 取得したドメインを指定してください
+
+	# ドキュメント設定
 	root       /var/www/release/lib/ProjectPackage/apidocs; #環境に合わせて適宜変更して下さい
 	access_log /var/www/logs/api_access.log proxytypelog;
 	error_log  /var/www/logs/api_error.log debug;
 	index      index.php;
 
+	# ELB-EC2用の補足設定
 	# ELBじゃないホントのIPアドレスを取得するようにする設定
 	set_real_ip_from 10.0.0.0/24;
 	set_real_ip_from 10.0.1.0/24;
@@ -107,35 +122,50 @@ server {
 
 # フロント用
 server {
-	# 環境の設定
+
+	# 環境振り分け設定
+	set $stage "local";
 	set $workspace "";
 	if (-f '/var/www/.dev'){
+		set $stage "dev";
 		set $workspace "dev";
 	}
+	if (-f '/var/www/.prod'){
+		set $stage "prod";
+		set $workspace "";
+	}
 
+	# プロトコル設定
 	listen                    80;
 	# SSLとSpdyとProxyProtocol
-	# ELBのProxyProtocolを使ってSPDYを有効にする場合は以下を利用する
-	listen                    443 ssl http2 proxy_protocol;
-	# ELBのProxyProtocolを使は無いでSPDYを有効にする場合は以下を利用する
-	#listen                    443 ssl http2;
+	# ELBのProxyProtocolを使ってhttp2を有効にする場合は以下を利用する
+	#listen                    443 ssl http2 proxy_protocol;
+	# ELBのProxyProtocolを使は無いでhttp2を有効にする場合は以下を利用する
+	listen                    443 ssl http2;
 	# ELBでSSLが終端する場合、以下は不要
 	ssl_certificate           /var/www/.ssl/private.pem;
 	ssl_certificate_key       /var/www/.ssl/private.key;
+	ssl_trusted_certificate   /var/www/.ssl/private.pem;
+	ssl_dhparam               /etc/ssl/dhparam.pem;
 	ssl_session_timeout       5m;
 	ssl_session_cache         shared:SSL:60m;
 	ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers               HIGH:!aNULL:!MD5;
+	ssl_ciphers               'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:ECDHE-RSA-DES-CBC3-SHA:ECDHE-ECDSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
 	ssl_prefer_server_ciphers on;
+	ssl_stapling              on;
+	ssl_stapling_verify       on;
+	resolver 8.8.8.8;
 
-	server_name devservice.domain service.domain; # 取得したドメインを指定してください
-	# ドキュメントルートを指定して下さい
-	# Linuxの場合
+	# ドメイン設定
+	server_name localservice.domain devservice.domain service.domain; # 取得したドメインを指定してください
+
+	# ドキュメント設定
 	root       /var/www/release/lib/ProjectPackage/webdocs; #環境に合わせて適宜変更して下さい
 	access_log /var/www/logs/web_access.log proxytypelog;
 	error_log  /var/www/logs/web_error.log debug;
 	index      index.html;
 
+	# ELB-EC2用の補足設定
 	# ELBじゃないホントのIPアドレスを取得するようにする設定
 	set_real_ip_from 10.0.0.0/24;
 	set_real_ip_from 10.0.1.0/24;
@@ -186,7 +216,8 @@ server {
 	if ($http_user_agent ~* ELB-HealthChecker) {
 		set $auth_basic off;
 	}
-	# デバック中は一旦封印！
+
+	# ベーシック認証を掛けたい場合は以下を有効化
 	#auth_basic $auth_basic;
 	#auth_basic_user_file /var/www/release/.htpasswd;
 
@@ -264,35 +295,50 @@ server {
 
 # 管理ツール用
 server {
-	# 環境の設定
+
+	# 環境振り分け設定
+	set $stage "local";
 	set $workspace "";
 	if (-f '/var/www/.dev'){
+		set $stage "dev";
 		set $workspace "dev";
 	}
+	if (-f '/var/www/.prod'){
+		set $stage "prod";
+		set $workspace "";
+	}
 
+	# プロトコル設定
 	listen                    80;
 	# SSLとSpdyとProxyProtocol
-	# ELBのProxyProtocolを使ってSPDYを有効にする場合は以下を利用する
-	listen                    443 ssl http2 proxy_protocol;
-	# ELBのProxyProtocolを使は無いでSPDYを有効にする場合は以下を利用する
-	#listen                    443 ssl http2;
+	# ELBのProxyProtocolを使ってhttp2を有効にする場合は以下を利用する
+	#listen                    443 ssl http2 proxy_protocol;
+	# ELBのProxyProtocolを使は無いでhttp2を有効にする場合は以下を利用する
+	listen                    443 ssl http2;
 	# ELBでSSLが終端する場合、以下は不要
 	ssl_certificate           /var/www/.ssl/private.pem;
 	ssl_certificate_key       /var/www/.ssl/private.key;
+	ssl_trusted_certificate   /var/www/.ssl/private.pem;
+	ssl_dhparam               /etc/ssl/dhparam.pem;
 	ssl_session_timeout       5m;
 	ssl_session_cache         shared:SSL:60m;
 	ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers               HIGH:!aNULL:!MD5;
+	ssl_ciphers               'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:ECDHE-RSA-DES-CBC3-SHA:ECDHE-ECDSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
 	ssl_prefer_server_ciphers on;
+	ssl_stapling              on;
+	ssl_stapling_verify       on;
+	resolver 8.8.8.8;
 
-	server_name devfwmservice.domain fwmservice.domain; # 取得したドメインを指定してください
-	# ドキュメントルートを指定して下さい
-	# Linuxの場合
-	root       /var/www/release/lib/FrameworkManager/managedocs; #環境に合わせて適宜変更して下さい
-	access_log /var/www/logs/fwm_access.log proxytypelog
+	# ドメイン設定
+	server_name localfwmservice.domain devfwmservice.domain fwmservice.domain; # 取得したドメインを指定してください
+
+	# ドキュメント設定
+	root       /var/www/release/lib/FrameworkManager/template/managedocs; #環境に合わせて適宜変更して下さい
+	access_log /var/www/logs/fwm_access.log proxytypelog;
 	error_log  /var/www/logs/fwm_error.log debug;
 	index      index.html;
 
+	# ELB-EC2用の補足設定
 	# ELBじゃないホントのIPアドレスを取得するようにする設定
 	set_real_ip_from 10.0.0.0/24;
 	set_real_ip_from 10.0.1.0/24;
@@ -327,8 +373,8 @@ server {
 	add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains;';
 
 	# 管理ツールはベーシック認証を付ける
-	auth_basic 'use basic area.';
-	auth_basic_user_file /var/www/release/.htpasswd;
+	#auth_basic 'use basic area.';
+	#auth_basic_user_file /var/www/release/.htpasswd;
 
 	# ファイル無指定のURLをindex.phpにリライトする設定
 	location ~ /$ {
