コンポーザー修正

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
             "cp -rf ./logs ../../",
             "cp -rf ./_tmp ../../",
             "cp -rf ./supple ../../",
+            "cp -rf ./.gitignore ../../",
+            "cp -rf ./vagrant-nginx.sh ../../",
+            "cp -rf ./Vagrantfile ../../",
             "mkdir -p ../../lib 2>/dev/null",
             "mkdir -p ../../lib/FrameworkPackage 2>/dev/null",
             "mkdir -p ../../lib/FrameworkPackage/core 2>/dev/null",
@@ -55,6 +58,9 @@
             "rm -rf ./logs 2>/dev/null",
             "rm -rf ./_tmp 2>/dev/null",
             "rm -rf ./supple 2>/dev/null",
+            "rm -rf ./.gitignore 2>/dev/null",
+            "rm -rf ./vagrant-nginx.sh 2>/dev/null",
+            "rm -rf ./Vagrantfile 2>/dev/null",
             "rm -rf ./composer 2>/dev/null",
             "rm -rf ./lib 2>/dev/null",
             "rm -rf ./autoload.php 2>/dev/null",
@@ -68,10 +74,16 @@
             "cp -f ../../lib/FrameworkManager/core/FrameworkManager.config.xml ../../_tmp/FrameworkManager.config.xml.bak 2>/dev/null",
             "cp -f ../../lib/FrameworkManager/core/FrameworkManager.package.xml ../../_tmp/FrameworkManager.package.xml.bak 2>/dev/null",
             "cp -rf ./lib/* ../../lib 2>/dev/null",
+            "cp -rf ./.gitignore ../../",
+            "cp -rf ./vagrant-nginx.sh ../../",
+            "cp -rf ./Vagrantfile ../../",
             "rm -rf ./docs 2>/dev/null",
             "rm -rf ./logs 2>/dev/null",
             "rm -rf ./_tmp 2>/dev/null",
             "rm -rf ./supple 2>/dev/null",
+            "rm -rf ./.gitignore 2>/dev/null",
+            "rm -rf ./vagrant-nginx.sh 2>/dev/null",
+            "rm -rf ./Vagrantfile 2>/dev/null",
             "rm -rf ./composer 2>/dev/null",
             "rm -rf ./lib 2>/dev/null",
             "rm -rf ./autoload.php 2>/dev/null",
