dhparamのデフォの参照先を変えた

--- a/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
+++ b/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
@@ -47,7 +47,7 @@ server {
 	ssl_certificate           /var/www/.ssl/private.pem;
 	ssl_certificate_key       /var/www/.ssl/private.key;
 	ssl_trusted_certificate   /var/www/.ssl/private.pem;
-	ssl_dhparam               /etc/ssl/dhparam.pem;
+	ssl_dhparam               /var/www/.ssl/dhparam.pem;
 	ssl_session_timeout       5m;
 	ssl_session_cache         shared:SSL:60m;
 	ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
@@ -146,7 +146,7 @@ server {
 	ssl_certificate           /var/www/.ssl/private.pem;
 	ssl_certificate_key       /var/www/.ssl/private.key;
 	ssl_trusted_certificate   /var/www/.ssl/private.pem;
-	ssl_dhparam               /etc/ssl/dhparam.pem;
+	ssl_dhparam               /var/www/.ssl/dhparam.pem;
 	ssl_session_timeout       5m;
 	ssl_session_cache         shared:SSL:60m;
 	ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
@@ -319,7 +319,7 @@ server {
 	ssl_certificate           /var/www/.ssl/private.pem;
 	ssl_certificate_key       /var/www/.ssl/private.key;
 	ssl_trusted_certificate   /var/www/.ssl/private.pem;
-	ssl_dhparam               /etc/ssl/dhparam.pem;
+	ssl_dhparam               /var/www/.ssl/dhparam.pem;
 	ssl_session_timeout       5m;
 	ssl_session_cache         shared:SSL:60m;
 	ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
