--- a/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
+++ b/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
@@ -6,7 +6,7 @@
 # S3にリバースプロキシする為にAWSのDNSを更新する
 resolver 10.0.0.2 valid=5s;
 # リバースプロキシ設定
-proxy_cache_path /cache/nginx/cache levels=1:2 keys_zone=anlimited:8m max_size=50m inactive=120m;
+proxy_cache_path /cache/nginx/cache levels=1:2 keys_zone=project:8m max_size=50m inactive=120m;
 proxy_temp_path /cache/nginx/tmp;
 
 # logのフォーマット
