コンポーザーのポストインストールコマンドもappspec.ymlを移動する用に修正

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
             "cp -rf ./.gitignore ../../",
             "cp -rf ./vagrant-nginx.sh ../../",
             "cp -rf ./Vagrantfile ../../",
+            "cp -rf ./appspec.yml ../../",
             "mkdir -p ../../lib 2>/dev/null",
             "mkdir -p ../../lib/FrameworkPackage 2>/dev/null",
             "mkdir -p ../../lib/FrameworkPackage/core 2>/dev/null",
@@ -61,6 +62,7 @@
             "rm -rf ./.gitignore 2>/dev/null",
             "rm -rf ./vagrant-nginx.sh 2>/dev/null",
             "rm -rf ./Vagrantfile 2>/dev/null",
+            "rm -rf ./appspec.yml 2>/dev/null",
             "rm -rf ./composer 2>/dev/null",
             "rm -rf ./lib 2>/dev/null",
             "rm -rf ./autoload.php 2>/dev/null",
@@ -77,6 +79,7 @@
             "cp -rf ./.gitignore ../../",
             "cp -rf ./vagrant-nginx.sh ../../",
             "cp -rf ./Vagrantfile ../../",
+            "cp -rf ./appspec.yml ../../",
             "rm -rf ./docs 2>/dev/null",
             "rm -rf ./logs 2>/dev/null",
             "rm -rf ./_tmp 2>/dev/null",
@@ -84,6 +87,7 @@
             "rm -rf ./.gitignore 2>/dev/null",
             "rm -rf ./vagrant-nginx.sh 2>/dev/null",
             "rm -rf ./Vagrantfile 2>/dev/null",
+            "rm -rf ./appspec.yml 2>/dev/null",
             "rm -rf ./composer 2>/dev/null",
             "rm -rf ./lib 2>/dev/null",
             "rm -rf ./autoload.php 2>/dev/null",
