--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
             "cp -f ../../lib/FrameworkPackage/core/package.xml ../../_tmp/package.xml.bak 2>/dev/null",
             "cp -f ../../lib/FrameworkManager/core/FrameworkManager.config.xml ../../_tmp/FrameworkManager.config.xml.bak 2>/dev/null",
             "cp -f ../../lib/FrameworkManager/core/FrameworkManager.package.xml ../../_tmp/FrameworkManager.package.xml.bak 2>/dev/null",
+            "rm -rf ./lib/FrameworkManager/automigration/* 2>/dev/null",
             "cp -rf ./lib/* ../../lib 2>/dev/null",
             "rm -rf ./docs 2>/dev/null",
             "rm -rf ./logs 2>/dev/null",
@@ -75,6 +76,7 @@
             "cp -f ../../lib/FrameworkPackage/core/package.xml ../../_tmp/package.xml.bak 2>/dev/null",
             "cp -f ../../lib/FrameworkManager/core/FrameworkManager.config.xml ../../_tmp/FrameworkManager.config.xml.bak 2>/dev/null",
             "cp -f ../../lib/FrameworkManager/core/FrameworkManager.package.xml ../../_tmp/FrameworkManager.package.xml.bak 2>/dev/null",
+            "rm -rf ./lib/FrameworkManager/automigration/* 2>/dev/null",
             "cp -rf ./lib/* ../../lib 2>/dev/null",
             "cp -rf ./.gitignore ../../",
             "cp -rf ./vagrant-nginx.sh ../../",
