初期Nginxの設定とVagrantのローカルIP決定ロジック修正

--- a/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
+++ b/supple/setting/NginxWithPHPFPM/conf.d/nginx-linux.conf
@@ -265,6 +265,11 @@ server {
 		rewrite  /fwm/(.*)\.(.*) /index.php?_c_=fwm/$1&_o_=$2;
 	}
 
+	# サブディレクトリをRootのFlowに置き換える
+	location ~ /(.*)\/(.*)\.(html|json|xml|csv|tsv) {
+		rewrite /(.*)\/(.*)\.(.*)$ /$1-$2.$3;
+	}
+
 	# UNICORN-MVC用のリライト設定
 	location ~ \.(html|json|xml|csv|tsv) {
 		rewrite /(.*)\.(.*)$ /index.php?_c_=$1&_o_=$2;
